src/objects/Valuation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ExamRoomValue__c</fullName>
        <label>Exam Room Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InfusionRoomValue__c</fullName>
        <label>Infusion Room Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WaitingRoomValue__c</fullName>
        <label>Waiting Room Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WallboardValue__c</fullName>
        <label>Wallboard Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WifiValue__c</fullName>
        <label>Wifi Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Valuation</label>
</CustomObject>